--- a/Results/log.html
+++ b/Results/log.html
@@ -1803,31 +1803,31 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,291],[],[[5,0,0,[],[0,284,5,6],[[1,7,0,0,0,0,0,0,[0,286,0],[[286,5,8]]],[2,9,0,0,0,0,0,0,[0,289,0,10],[[289,5,10]]]]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,20242],[[4,5,6,7,[],[1,20,20220],[],[[8,0,9,[10],[1,362,19877],[[1,11,12,0,13,0,0,0,[1,362,5817],[[0,14,15,0,16,17,0,0,[1,362,1],[]],[0,18,15,0,19,20,0,0,[1,363,3679],[[363,2,21],[384,2,22]]],[0,23,15,0,24,0,0,0,[1,4042,1126],[]],[0,25,15,0,26,27,0,0,[1,5168,1011],[]]]],[0,28,29,0,0,0,0,0,[1,6179,3177],[[0,30,15,0,31,32,0,0,[1,6179,3177],[[6180,2,33]]]]],[0,34,29,0,0,0,0,0,[1,9356,1319],[[0,35,15,0,36,37,0,0,[1,9357,1318],[[9357,2,38]]]]],[0,39,29,0,0,0,0,0,[1,10675,2016],[[0,40,15,0,41,42,0,0,[1,10676,2015],[[12691,2,43]]]]],[0,44,29,0,0,0,0,0,[1,12692,1238],[[0,35,15,0,36,45,0,0,[1,12692,1237],[[12692,2,46]]]]],[0,47,29,0,0,0,0,0,[1,13931,3049],[[0,48,15,0,49,50,0,0,[1,13932,3048],[[16980,2,51]]]]],[2,52,12,0,0,0,0,0,[1,16980,3259],[[0,53,15,0,54,0,0,0,[1,16980,3258],[]]]]]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Mian","*C:\\Users\\aflores\\Desktop\\Robot FrameWork\\FInal-Excercise\\tests\\mian.robot","*../tests/mian.robot","*<p>This is a final excercise in the Robot Fram\x3c/p>","*Add and Remove element","*Setup failed:\nNo keyword with name 'Begin Web Test' found.\n\nAlso teardown failed:\nNo keyword with name 'End Web Test' found.","*Begin Web Test","*No keyword with name 'Begin Web Test' found.","*End Web Test","*No keyword with name 'End Web Test' found.","eNqtjrsOwjAMAH/FWyY6ISF1Da3EWoFYvITgCqtJjOzw+HyCEBMr+53uBlVR4AIzJwLnezwYqWGYkygZbsmWKlec5CQVRg2ZjqILjrsS0mp4RtLIRljJqmHmUDp9ow6kQOJCsO5h+FNkIpObxmZ4yVl+Upsevsgn9eB6Abdvb+CDkTkwipUbz9Z+7iHxuXsBS49ecQ==","eNqtjrEKwjAQQH/ltk52E6Gb1BSclKK4BEpMr3iY5OQuVj/fiLg4u7/He0aEBSjBRAGhaht7VBS1bgosqHaDes18sz2fOUMnLuKJ5Wq7bXJhYZ4exZOizahZbSSXanmjFXCCQAlh2YD5U6RH5bv4Yux3dj2OQ4+RZxxMwIgp62961cBX+aQflC9QHcortE5RK1D0mQpPWv5mF2isX4LoZHY="]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\aflores\\Desktop\\Robot FrameWork\\FInal-Excercise\\tests","*../tests","*Mian","*C:\\Users\\aflores\\Desktop\\Robot FrameWork\\FInal-Excercise\\tests\\Mian.robot","*../tests/Mian.robot","*<p>This is a final excercise in the Robot Framework\x3c/p>","*Basic Auth","*<p>This a test to verify\x3c/p>","*Test-3","*Begin Web Test","*Common","*<p>This is some basic info about the test\x3c/p>","*Set Selenium Speed","*SeleniumLibrary","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*1s","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'chrome' to base url '<a href=\"https://the-internet.herokuapp.com/\">https://the-internet.herokuapp.com/\x3c/a>'.","*Executing: C:\\Python311\\Lib\\site-packages\\selenium\\webdriver\\common\\windows\\selenium-manager.exe --browser chrome --output json","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Wait Until Page Contains","*<p>Waits until <code>text\x3c/code> appears on the current page.\x3c/p>","*Welcome to the-internet","*Open Basic Auth Page","*Basic_Auth","*Click Link","*<p>Clicks a link identified by <code>locator\x3c/code>.\x3c/p>","*//*[@id=\"content\"]/ul/li[3]/a","*Clicking link '//*[@id=\"content\"]/ul/li[3]/a'.","*Login with valid credentials (user: admin, password: admin)","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*${URL_AUTH}","eNqdyzEOgCAMAMCvEBYmYSdK/IFPMBWrJWohUP5v4hNcbrulICc+Va+3MiMoqnhMmkRK887B/iT2n7MQDokFK6NYwpqvDqXYmB+3QUtxhS6kw+86OgjmBa24NJE=","*Validate that the authentication was successful.","*Page Should Contain","*<p>Verifies that current page contains <code>text\x3c/code>.\x3c/p>","*${LABEL_SUCCESSFUL}","*Current page contains text 'Congratulations! You must have the proper credentials.'.","*Login with not valid credentials (user: admin1, password: admin1)","*${URL_AUTH_INVALID}","eNqlyzEOgCAMAMCvEBYmIa4GiT/wCaZitUStBMr/HXyC0003Z+TEh2rlUsaDooL7qEkk18E52O7E/fAxCWGXWLAwiiUsz9kgZxuf261QU1ygCenwI3sHwbxK+TVV","*Validate that the authentication was unsuccessful.","*Page Should Not Contain","*<p>Verifies the current page does not contain <code>text\x3c/code>.\x3c/p>","*${LABEL_UNSUCCESSFUL}","*Current page does not contain text 'Congratulations! You must have the proper credentials.'.","*End Web Test","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"Mian","name":"Mian","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:20","fail":0,"label":"Test-3","pass":1,"skip":0}],[{"elapsed":"00:00:20","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:20","fail":0,"id":"s1-s1","label":"Tests.Mian","name":"Mian","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["errors"] = [[280,4,11],[282,4,12]];
+window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1683159895960;
+window.output["baseMillis"] = 1683246867412;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 299;
+window.output["generated"] = 20250;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"FAIL","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
