--- a/Results/report.html
+++ b/Results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,291],[],[[5,0,0,[],[0,284,5,6],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,20242],[[4,5,6,7,[],[1,20,20220],[],[[8,0,9,[10],[1,362,19877],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Mian","*C:\\Users\\aflores\\Desktop\\Robot FrameWork\\FInal-Excercise\\tests\\mian.robot","*../tests/mian.robot","*<p>This is a final excercise in the Robot Fram\x3c/p>","*Add and Remove element","*Setup failed:\nNo keyword with name 'Begin Web Test' found.\n\nAlso teardown failed:\nNo keyword with name 'End Web Test' found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\aflores\\Desktop\\Robot FrameWork\\FInal-Excercise\\tests","*../tests","*Mian","*C:\\Users\\aflores\\Desktop\\Robot FrameWork\\FInal-Excercise\\tests\\Mian.robot","*../tests/Mian.robot","*<p>This is a final excercise in the Robot Framework\x3c/p>","*Basic Auth","*<p>This a test to verify\x3c/p>","*Test-3"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"Mian","name":"Mian","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:20","fail":0,"label":"Test-3","pass":1,"skip":0}],[{"elapsed":"00:00:20","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:20","fail":0,"id":"s1-s1","label":"Tests.Mian","name":"Mian","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1683159895960;
+window.output["baseMillis"] = 1683246867412;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 299;
+window.output["generated"] = 20250;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
