Finished some Test in the excercice

--- a/Results/report.html
+++ b/Results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,20242],[[4,5,6,7,[],[1,20,20220],[],[[8,0,9,[10],[1,362,19877],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,28422],[[4,5,6,7,[],[1,21,28397],[],[[8,0,9,[10],[1,378,28037],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\aflores\\Desktop\\Robot FrameWork\\FInal-Excercise\\tests","*../tests","*Mian","*C:\\Users\\aflores\\Desktop\\Robot FrameWork\\FInal-Excercise\\tests\\Mian.robot","*../tests/Mian.robot","*<p>This is a final excercise in the Robot Framework\x3c/p>","*Basic Auth","*<p>This a test to verify\x3c/p>","*Test-3"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\aflores\\Desktop\\Robot FrameWork\\FInal-Excercise\\tests","*../tests","*Mian","*C:\\Users\\aflores\\Desktop\\Robot FrameWork\\FInal-Excercise\\tests\\Mian.robot","*../tests/Mian.robot","*<p>This is a final excercise in the Robot Framework\x3c/p>","*Form Authetication","*<p>This a test to verify\x3c/p>","*Test-15"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:20","fail":0,"label":"Test-3","pass":1,"skip":0}],[{"elapsed":"00:00:20","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:20","fail":0,"id":"s1-s1","label":"Tests.Mian","name":"Mian","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:28","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:28","fail":0,"label":"Test-15","pass":1,"skip":0}],[{"elapsed":"00:00:28","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:28","fail":0,"id":"s1-s1","label":"Tests.Mian","name":"Mian","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1683246867412;
+window.output["baseMillis"] = 1683592357745;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 20250;
+window.output["generated"] = 28438;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
