--- a/Results/report.html
+++ b/Results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16271],[[4,5,6,7,[],[1,21,16248],[],[[8,0,9,[10],[1,523,15745],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,45013],[[4,5,6,7,[],[1,22,44986],[],[[8,0,9,[10],[1,553,44451],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\aflores\\Desktop\\Robot FrameWork\\FInal-Excercise\\tests","*../tests","*Mian","*C:\\Users\\aflores\\Desktop\\Robot FrameWork\\FInal-Excercise\\tests\\Mian.robot","*../tests/Mian.robot","*<p>This is a final excercise in the Robot Framework\x3c/p>","*Drag and Drop","*<p>This a test to verify\x3c/p>","*Test-7"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\aflores\\Desktop\\Robot FrameWork\\FInal-Excercise\\tests","*../tests","*Mian","*C:\\Users\\aflores\\Desktop\\Robot FrameWork\\FInal-Excercise\\tests\\Mian.robot","*../tests/Mian.robot","*<p>This is a final excercise in the Robot Framework\x3c/p>","*Disappearing Elements","*<p>This a test to verify\x3c/p>","*Test-6"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:16","fail":0,"label":"Test-7","pass":1,"skip":0}],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1","label":"Tests.Mian","name":"Mian","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:44","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:44","fail":0,"label":"Test-6","pass":1,"skip":0}],[{"elapsed":"00:00:45","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:45","fail":0,"id":"s1-s1","label":"Tests.Mian","name":"Mian","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1683753514732;
+window.output["baseMillis"] = 1683916484446;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16280;
+window.output["generated"] = 45050;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
